src/test/ui/macros/macro-attribute.stderr
error: expected a literal or ::-separated path
  --> $DIR/macro-attribute.rs:1:9
   |
LL | #[doc = $not_there]
   |         ^

error: aborting due to previous error

